samples/_failures_safe/1761532507_a5ec8f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2972423.c: In function ‘main’:
./samples/SAFE/__tmp_b2972423.c:167:5: error: expected expression at end of input
  167 |     printf("Compression ratio: %.2f%%\n", (float)
      |     ^~~~~~
./samples/SAFE/__tmp_b2972423.c:167:5: error: expected declaration or statement at end of input
